# cpp-wheel-impl

./: C++_轮子实现计划.md  README.md  字节跳动C++二面：手写shared_ptr实现.md  手撕STL计划.md
impl/any/: CMakeLists.txt
impl/any/include/: any.hpp
impl/any/test/: any_test.cpp
impl/epoll_event_loop/: CMakeLists.txt
impl/epoll_event_loop/include/: epoll_event_loop.cpp  epoll_event_loop.hpp
impl/epoll_event_loop/test/: epoll_event_loop_test.cpp
impl/function/: CMakeLists.txt
impl/function/include/: function.hpp
impl/function/test/: function_test.cpp
impl/memory_pool/: CMakeLists.txt
impl/memory_pool/include/: memory_pool.hpp
impl/memory_pool/test/: memory_pool_test.cpp
impl/optional/: CMakeLists.txt
impl/optional/include/: optional.hpp
impl/optional/test/: optional_test.cpp
impl/rpc_framework/: CMakeLists.txt
impl/rpc_framework/include/: rpc_client.cpp  rpc_client.tpp  rpc_framework.hpp  rpc_protocol.cpp  rpc_serializer.cpp  rpc_serializer.tpp  rpc_server.cpp
impl/rpc_framework/test/: rpc_framework_simple_test.cpp  rpc_framework_test.cpp
impl/shared_ptr/: CMakeLists.txt
impl/shared_ptr/include/: shared_ptr.hpp
impl/shared_ptr/test/: shared_ptr_test.cpp
impl/string/: CMakeLists.txt  string.hpp
impl/string/test/: string_test.cpp
impl/thread/: CMakeLists.txt
impl/thread/include/: thread.hpp
impl/thread/test/: minimal_test.cpp  thread_test.cpp
impl/thread_pool/: CMakeLists.txt
impl/thread_pool/include/: thread_pool.hpp
impl/thread_pool/test/: thread_pool_test.cpp
impl/tuple/: CMakeLists.txt
impl/tuple/include/: tuple.hpp
impl/tuple/test/: tuple_test.cpp
impl/unique_ptr/: CMakeLists.txt  unique_ptr.hpp
impl/unique_ptr/test/: unique_ptr_test.cpp
impl/variant/: CMakeLists.txt
impl/variant/include/: variant.hpp
impl/variant/test/: variant_test.cpp
impl/vector/: CMakeLists.txt  vector.hpp
impl/vector/test/: vector_test.cpp
notes/: any.md  epoll_event_loop.md  function.md  memory_pool.md  optional.md  rpc_framework.md  shared_ptr.md  string.md  thread.md  thread_pool.md  tuple.md  unique_ptr.md  variant.md  vector.md
stl-impl/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  debug_advance  debug_advance.cpp  debug_comparison  debug_comparison.cpp  debug_comparison2  debug_comparison2.cpp  debug_map_erase  debug_map_erase.cpp  debug_multi  debug_multiset  debug_multiset.cpp  debug_rit  debug_rit.cpp  debug_std  debug_std.cpp  debug_std2  debug_std2.cpp
stl-impl/docs/implementation/: allocator.md  deque_implementation.md  functional.md  iterator.md  list_implementation.md  map_implementation.md  multimap_implementation.md  multiset_implementation.md  priority_queue_implementation.md  queue_implementation.md  rb_tree_implementation.md  set_implementation.md  stack_implementation.md  vector.md
stl-impl/include/: stl.hpp
stl-impl/include/stl/: algorithm.hpp  allocator.hpp  deque.hpp  functional.hpp  iterator.hpp  list.hpp  vector.hpp
stl-impl/include/stl/adapter/: priority_queue.hpp  queue.hpp  stack.hpp
stl-impl/include/stl/algorithm/: basic.hpp  heap.hpp  search.hpp  search.hpp.backup  sort.hpp
stl-impl/include/stl/container/: map.hpp  multimap.hpp  multiset.hpp  set.hpp  unordered_map.hpp  unordered_multimap.hpp  unordered_multiset.hpp  unordered_set.hpp
stl-impl/include/stl/hash/: hash_table.hpp
stl-impl/include/stl/tree/: rb_tree.hpp
stl-impl/test/: CMakeLists.txt  Makefile  cmake_install.cmake  debug_multi.cpp
stl-impl/test/integration/: CMakeLists.txt  Makefile  cmake_install.cmake
stl-impl/test/performance/: CMakeLists.txt
stl-impl/test/unit/: CMakeLists.txt  Makefile  Makefile.tests  README_hash_tests.md  algorithm_test  algorithm_test.cpp  allocator_test  allocator_test.cpp  functional_test  functional_test.cpp  hash_table_basic_test  hash_table_basic_test.cpp  hash_table_test  hash_table_test.cpp  iterator_test  iterator_test.cpp  list_test  list_test.cpp  map_test  map_test.cpp  minimal_deque_test  minimal_deque_test.cpp  multimap_test  multimap_test.cpp  multiset_test  multiset_test.cpp  priority_queue_test  priority_queue_test.cpp  queue_test  queue_test.cpp  rb_tree_test_simple  rb_tree_test_simple.cpp  run_all_tests.sh  run_hash_tests.sh  set_test  set_test.cpp  stack_test  stack_test.cpp  test_hash_containers.mk  test_include.cpp  (+14 more)
stl-impl/test/unit/integration/: Makefile
stl-impl/test/unit/performance/: Makefile  cmake_install.cmake
stl-impl/test/unit/unit/: Makefile  cmake_install.cmake
